IN PROGRESS - task 202: Metadata: refactor function that loads manifests to database https://www.taveiranet.com/chiliproject/issues/show/202

--- a/minidlna.conf
+++ b/minidlna.conf
@@ -11,13 +11,13 @@ port=8200
 #   + "A" for audio  (eg. media_dir=A,/home/jmaggard/Music)
 #   + "V" for video  (eg. media_dir=V,/home/jmaggard/Videos)
 #   + "P" for images (eg. media_dir=P,/home/jmaggard/Pictures)
-media_dir=/opt
+media_dir=/home/smiff/git/minidlna/content
 
 # set this if you want to customize the name that shows up on your clients
-#friendly_name=My DLNA Server
+friendly_name=P2P DLNA
 
 # set this if you would like to specify the directory where you want MiniDLNA to store its database and album art cache
-#db_dir=/var/cache/minidlna
+db_dir=/home/smiff/git/minidlna/tmp
 
 # set this if you would like to specify the directory where you want MiniDLNA to store its log file
 #log_dir=/var/log
@@ -64,4 +64,4 @@ model_number=1
 #   + "V" - "Video"
 #   + "P" - "Pictures"
 # if you specify "B" and client device is audio-only then "Music/Folders" will be used as root
-#root_container=.
+#root_container=
