--- a/minidlna.conf
+++ b/minidlna.conf
@@ -11,13 +11,13 @@ port=8200
 #   + "A" for audio  (eg. media_dir=A,/home/jmaggard/Music)
 #   + "V" for video  (eg. media_dir=V,/home/jmaggard/Videos)
 #   + "P" for images (eg. media_dir=P,/home/jmaggard/Pictures)
-media_dir=/home/smiff/git/minidlna/content
+media_dir=/tmp/minidlna/content
 
 # set this if you want to customize the name that shows up on your clients
 friendly_name=P2P DLNA
 
 # set this if you would like to specify the directory where you want MiniDLNA to store its database and album art cache
-db_dir=/home/smiff/git/minidlna/tmp
+db_dir=/tmp/minidlna/tmp
 
 # set this if you would like to specify the directory where you want MiniDLNA to store its log file
 #log_dir=/var/log
@@ -25,6 +25,7 @@ db_dir=/home/smiff/git/minidlna/tmp
 # set this to change the verbosity of the information that is logged
 # each section can use a different level: off, fatal, error, warn, info, or debug
 #log_level=general,artwork,database,inotify,scanner,metadata,http,ssdp,tivo=warn
+log_level=all=debug
 
 # this should be a list of file names to check for when searching for album art
 # note: names should be delimited with a forward slash ("/")
